packages/kit/test/apps/basics/src/routes/errors/load-error-page-options/csr/+page.js
export function load() {
	throw new Error('Crashing now');
}
